--- a/content/index.html
+++ b/content/index.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組作業.html'>小組作業</a><ul class='dropdown'><li><a href='week 5.html'>week 5</a><li><a href='week 6.html'>week 6</a><li><a href='week 7.html'>week 7</a><li><a href='week 8.html'>week 8</a></li></ul><li><a href='小組影片.html'>小組影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組作業.html'>小組作業</a><ul class='dropdown'><li><a href='week 5.html'>week 5</a><li><a href='week 6.html'>week 6</a><li><a href='week 7.html'>week 7</a><li><a href='week 8.html'>week 8</a><li><a href='week 9.html'>week 9</a></li></ul><li><a href='小組影片.html'>小組影片</a></li>
                       </ul>
                 </nav>
               </div>
