--- a/content/week 8.html
+++ b/content/week 8.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組作業.html'>小組作業</a><ul class='dropdown'><li><a href='week 5.html'>week 5</a><li><a href='week 6.html'>week 6</a><li><a href='week 7.html'>week 7</a><li><a href='week 8.html'>week 8</a></li></ul><li><a href='小組影片.html'>小組影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組作業.html'>小組作業</a><ul class='dropdown'><li><a href='week 5.html'>week 5</a><li><a href='week 6.html'>week 6</a><li><a href='week 7.html'>week 7</a><li><a href='week 8.html'>week 8</a><li><a href='week 9.html'>week 9</a></li></ul><li><a href='小組影片.html'>小組影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week 7 << <a href='week 7.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片<br /><h1>week 8</h1>
+    <div id="tipue_search_content">week 7 << <a href='week 7.html'>Previous</a> <a href='week 9.html'>Next</a> >> week 9<br /><h1>week 8</h1>
 <p><span style="color: #ff0000;"><strong>程式模擬</strong></span></p>
 <p><span>模擬</span>主題:自動門開門機構</p>
 <p><span>模擬</span>人員:<span>40823221、40823237</span></p>
@@ -148,7 +148,10 @@ img.add_border {
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/5vKIvkMsucs" title="YouTube video player" width="560"></iframe></p>
 <p><span>第三次模擬 <span>(</span><a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3.ttt">模擬檔下載</a><span>)</span></span></p>
 <p>主動軸轉向問題已解決，結構仍有問題，推測是零件尺寸的取捨有問題</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/yHeHPjqGMQ4" title="YouTube video player" width="560"></iframe></p><br />week 7 << <a href='week 7.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/yHeHPjqGMQ4" title="YouTube video player" width="560"></iframe></p>
+<p><span>第四次模擬(<a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3.ttt">模擬檔下載</a>)</span></p>
+<p>改圖過後，以為是活塞配合有誤，但應該還是結構安排有問題</p>
+<br />week 7 << <a href='week 7.html'>Previous</a> <a href='week 9.html'>Next</a> >> week 9</div>
         
     <!-- footer -->
       <div class="container">
